@@ -1062,6 +1062,12 @@ SC_READING_SB_6	460
 SC_READING_SB_7	461
 SC_REFLECTDAMAGE	462
 SC_FORCEOFVANGUARD	463
+SC_SAVAGE_STEAK		464
+SC_COCKTAIL_WARG_BLOOD	465
+SC_MINOR_BBQ		466
+SC_SIROMA_ICE_TEA	467
+SC_DROCERA_HERB_STEAMED	468
+SC_PUTTI_TAILS_NOODLES	469
 
 e_gasp	0
 e_what	1
