@@ -447,6 +447,13 @@ typedef enum sc_type {
 	SC_REFLECTDAMAGE,
 	SC_FORCEOFVANGUARD,
 
+	SC_SAVAGE_STEAK,
+	SC_COCKTAIL_WARG_BLOOD,
+	SC_MINOR_BBQ,
+	SC_SIROMA_ICE_TEA,
+	SC_DROCERA_HERB_STEAMED,
+	SC_PUTTI_TAILS_NOODLES,
+
 	SC_MAX, //Automatically updated max, used in for's to check we are within bounds.
 } sc_type;
 
@@ -944,12 +951,12 @@ enum si_type {
 //	SI_MUSTLE_M = 488,
 //	SI_LIFE_FORCE_F = 489,
 	SI_VACUUM_EXTREME = 490,
-//	SI_SAVAGE_STEAK = 491,
-//	SI_COCKTAIL_WARG_BLOOD = 492,
-//	SI_MINOR_BBQ = 493,
-//	SI_SIROMA_ICE_TEA = 494,
-//	SI_DROCERA_HERB_STEAMED = 495,
-//	SI_PUTTI_TAILS_NOODLES = 496,
+	SI_SAVAGE_STEAK = 491,
+	SI_COCKTAIL_WARG_BLOOD = 492,
+	SI_MINOR_BBQ = 493,
+	SI_SIROMA_ICE_TEA = 494,
+	SI_DROCERA_HERB_STEAMED = 495,
+	SI_PUTTI_TAILS_NOODLES = 496,
 //	SI_BANANA_BOMB = 497,
 //	SI_SUMMON_AGNI = 498,
 	SI_READING_SB_4 = 499,
